--- a/SOURCE/ITA.Common.Host.EventCounters/ITA.Common.Host.EventCounters.csproj
+++ b/SOURCE/ITA.Common.Host.EventCounters/ITA.Common.Host.EventCounters.csproj
@@ -26,11 +26,12 @@
 
   <ItemGroup>
     <None Remove="FodyWeavers.xsd" />
+    <None Remove="FodyWeavers.xml" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
