--- a/SOURCE/ITA.Common.LINQ/ITA.Common.LINQ.csproj
+++ b/SOURCE/ITA.Common.LINQ/ITA.Common.LINQ.csproj
@@ -24,6 +24,10 @@
   <ItemGroup>
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="FodyWeavers.xml" />
+  </ItemGroup>
   
   <Import Project="$(SolutionDir)\..\EXTERNALS\ThirdParty\MSBuildCustomTargets\ITA.CSharp.targets" />
 
