--- a/SOURCE/Test/TestHostApp.WinServiceRunner/TestHostApp.WinServiceRunner.csproj
+++ b/SOURCE/Test/TestHostApp.WinServiceRunner/TestHostApp.WinServiceRunner.csproj
@@ -15,7 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="2.1.0-preview.19073.11" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Security.Cryptography.Xml" Version="4.7.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +39,7 @@
     <None Update="log4net.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Remove="FodyWeavers.xml" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\..\EXTERNALS\ThirdParty\MSBuildCustomTargets\ITA.CSharp.targets" />
