--- a/SOURCE/ITA.Common/ITA.Common.csproj
+++ b/SOURCE/ITA.Common/ITA.Common.csproj
@@ -35,7 +35,8 @@
     <PackageReference Include="ITA.MethodDecorator.Fody" Version="3.0.2">
       <IncludeAssets>all</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
